k8s/ispyagentdvr/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ispyagentdvr-route
  namespace: ispyagentdvr
spec:
  parentRefs:
    - name: private
      namespace: envoy-gateway-system
  hostnames:
    - "ispy.neffi.fr"
  rules:
    - backendRefs:
        - name: ispyagentdvr
          port: 8090
      matches:
        - path:
            type: PathPrefix
            value: /
